* CMAES bounds simplified to not resample if objective function returns an inf. 
* CMAES tolfun (when set within GUI) now working.
* DREAM settings extended to include random seed and r2_threshold value.
* Minor GUI tweaks: dialog timeout reduced from 30 to 15 sec, initialiseGUI() added to allow consistent initialisation, tag fields added to dialogs to allow closure during testing, control of new DREAM settings added to GUI.
* Updated example of pumping and climate to (i) show new feature of using S for climate estimates and (ii) to account for new steady state estimation of the initial soil moisture.

23 Nov 2023
* Landcover change example extended to include forcing data .csv file for simulations.
* DREAM calibration performance improved by the addition of options for the initial sampling method and the initial standard deviation for the sampling. This allows a model to be calibrated using CMA-ES or SP-UCI and then the DREAM can be used to sample around the previously idenified solution.
* Unit testing added. It includes the following tests: all example models built and simulated, outlier detection, soil moisture TFN model built and calibrated using all calibration schemes, display of calibration results and forcing plots. To run the tests, using the following command within matlab: testHydroSight().
* Bugs fixed in plotting forcing data box-plots.
* DREAM calibration CDF plot code re-wrote.
* Minor changes made to HydroSight_GUI.m to allow unit testing to close popup windows.
* Version number updated to 1.4.1.0

7 Dec 2022
* Unit testing bug fixed (i.e. after saving the project within calibrateNewModel(), path reset to the project folder).
* Unit testing command window text outputs added at each step. This was done to aid analysis of the results within GitHub Actions.

8 Dec 2022
* Bug fixed causing models with multiple pumping bores to fail during build.